# objex

./: .gitignore  README.md  agents.txt  goals.md  logo.txt  pyproject.toml  rabbito-agents-prod.txt  scan.sh
Formula/: objex.rb
docs/: cli.md  gateway.md  mcp.md  objex.md
objex_cli/: api.py  cli.py  scanner.py  storage.py
prompts/: gemini_scan_code.txt
scripts/: install.sh
